--- a/WevPage.html
+++ b/WevPage.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Hello</h1> 
+   <h1>Hello</h1>
+   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+    Dolorem amet consequuntur voluptatem inventore. Eveniet consectetur voluptas, 
+    provident ad maiores ducimus.</p> 
 </body>
 </html>
