--- a/WevPage.html
+++ b/WevPage.html
@@ -9,6 +9,8 @@
    <h1>Hello</h1>
    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
     Dolorem amet consequuntur voluptatem inventore. Eveniet consectetur voluptas, 
-    provident ad maiores ducimus.</p> 
+    provident ad maiores ducimus.</p>
+    
+    <span>Colombo</span>
 </body>
 </html>
